Firebase initialized, firebase deployed, Java 26 to java 17 migration, major errors checked and removed, Compilation issue in next commit, neltify config added, Database initialization linked