@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.2</version>
+            <version>1.18.32</version>
             <scope>provided</scope>
         </dependency>
         <!-- Test -->
@@ -100,7 +100,7 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.2</version>
+                            <version>1.18.32</version>
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
@@ -109,6 +109,8 @@
                         <arg>--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                         <arg>--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                         <arg>--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED</arg>
+                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
+                        <arg>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
